tests/models/struct/unnamed/isize/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2.0)]
    isize
);
fn main() {}
